2015-07-06  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-84

	* doc/source/index.rst:

	- Added missing modules

	* pyatmlab/{collocations,dataset,db,io,physics,tools}.py:

	- Fix docstring syntax errors
	
2015-07-02  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-83

	* pyatmlab/datasets/tovs.py(HIRS):

	- Fix typos

2015-07-02  Gerrit Holl  <g.holl@reading.ac.uk>

	* pyatmlab-0-0-82

	* pyatmlab/datasets/tovs.py(HIRS):

	- Fix typo

2015-07-02  Gerrit Holl  <g.holl@reading.ac.uk>:

	* pyatmlab-0-0-81

	* LICENSE: Updated years

	* setup.py: Added new package pyatmlab.datasets

	* pyatmlab/dataset.py: Use logging.error instead of print

	* pyatmlab/io.py:

	- Move collect_values function here

	* pyatmlab/tools.py:

	- Added a safe_eval function, inspired by
	  http://stackoverflow.com/a/9558001/974555
	
	* pyatmlab/datasets.py:

	- Removed this module

	* pyatmlab/datasets/{__init__,groundbased,tanso}.py:

	- Moved contents of datasets.py to this new package

	* pyatmlab/datasets/tovs.py:

	- Started working on HIRS reading routine
	
2015-04-28  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-80

	* doc/source/index.rst:

	- Added missing modules, pointed out dependencies

	* pyatmlab/collocations.py(ProfileCollocationDescriber):

	- When summarising partial column differences, also show percentages

2015-04-16  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-79

	* pyatmlab/collocations.py(ProfileCollocationDescriber):

	- Also show median primary, secondary

	* pyatmlab/graphics.py:

	- Move plotdatadir back to io

	- Accomodate 3d array writing

	* pyatmlab/io.py:

	- Move plotdatadir back here

	- Added function savetxt_3d that is like savetxt but writes in 3D

	* pyatmlab/physics.py:

	- Accommodate 3D array writing for sensitivity densities

2015-04-14  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-78

	* pyatmlab/collocations.py(ProfileCollocationDescriber):

	- Write DOFs for partial columns