@@ -15,6 +15,7 @@ import string
 import os.path
 import datetime
 import logging
+import xml.etree.ElementTree
 
 import numpy
 from . import config
@@ -91,6 +92,7 @@ chev_dtype_types = [numpy.float64] * 29
 chev_dtype_types[23] = numpy.uint16
 for i in (24, 25, 26, 28):
     chev_dtype_types[i] = numpy.uint16
+del i
 chev_dtype_types[27] = numpy.uint32
 chev_dtype_atm = list(zip(chev_dtype_names, chev_dtype_types,
                       chev_dtype_sizes))
@@ -239,3 +241,28 @@ def collect_values(fp, N, dtp):
         return numpy.array(L, dtype=dtp)
 
 
+
+def read_arts_srf(f_backend, backend_channel_response):
+    """Read spectral response function from ArtsXML format
+
+    Would rather have more generic functionality for reading ArtsXML but I
+    don't have time to implement something I don't need right now.
+
+    :param str f_backend: Path to backend (such as
+        NOAA18_HIRS.f_backend.xml).  Expect a single Vector.
+    :param str backend_channel_response: Path to channel response (such as
+        NOAA18_HIRS.backend_channel_ressponse.xml).
+    :returns list: List of tuples (frequency, weight) where frequency and
+        weight are ndarrays of dtype float32.
+    """
+    root = xml.etree.ElementTree.parse(f_backend).getroot()
+    centres = numpy.fromstring(root[0].text, sep=" ")
+    root = xml.etree.ElementTree.parse(backend_channel_response).getroot()
+    response = [(numpy.fromstring(x[0].text, sep=" ")+c,
+                 numpy.fromstring(x[1].text, sep=" "))
+                    for (x, c) in zip(root[0], centres)]
+    return response
+
+# For ArtsXML types, should eventually subclass
+# xml.etree.ElementTree.ElementTree and friends to restrict to ARTS types
+# and provide easy access to underlying values.  To be implemented.
